allow configuration of width,height and force_include variables from yml file

--- a/lib/config/critical_path_css.yml
+++ b/lib/config/critical_path_css.yml
@@ -5,6 +5,11 @@ defaults: &defaults
   # css_path: /path/to/css/from/public/main.css
   routes:
     - /
+  # width: 1300
+  # height: 900
+  # force_include:
+  #   - .keepMeEvenIfNotSeenInDom
+  #   - ^\.regexWorksToo
 
 development:
   <<: *defaults
